--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -2,9 +2,17 @@
 <h2>知乎 － 日报</h2>
 <%= DateTime.now %>
 <div class="row">
-	<% (1..3).each %>
-		<div class="col-lg-4">
-		</div>
+<% size = 
+	<div class="col-lg-4">
+
+	</div>
+	<div class="col-lg-4">
+
+	</div>
+	<div class="col-lg-4">
+
+	</div>
+
 
 	<% @stories.each do |s| %>
 	<div class="col-sm-6 col-md-4">
